--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,8 @@
     "python3": "^0.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "tcpdump": "^0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
